[project]
name = "netbelief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "catboost>=1.2.8",
    "chex>=0.1.91",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "flax>=0.12.1",
    "google-metrax>=0.2.4",
    "grain>=0.2.14",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "jax>=0.8.1",
    "kaleido>=1.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mininet>=2.3.0.dev6",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.35.2",
    "psutil>=7.1.3",
    "python-louvain>=0.16",
    "scapy>=2.6.1",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "2to3>=1.0", "xprof>=2.21.1", "ipywidgets>=8.1.8"]
